--- a/boot/baseline/BUILD.bazel
+++ b/boot/baseline/BUILD.bazel
@@ -1,5 +1,5 @@
-alias( # implemented in C, so no byte/opt versions.
-    name   = "ocamlrun",
-    actual = "//runtime:ocamlrun",
-    visibility = ["//visibility:public"]
-)
+# alias( # implemented in C, so no byte/opt versions.
+#     name   = "ocamlrun",
+#     actual = "//runtime:ocamlrun",
+#     visibility = ["//visibility:public"]
+# )
