--- a/config/config.ml.json
+++ b/config/config.ml.json
@@ -16,6 +16,9 @@
     "native_c_libraries": " -lm  -lpthread",
     "native_pack_linker": "ld -r -arch x86_64 -o ",
     "default_rpath": "",
+    "mkdll": "gcc -shared -undefined dynamic_lookup -Wl,-no_compact_unwind -Wl,-w  ",
+    "mkexe": "gcc -O2 -fno-strict-aliasing -fwrapv -pthread  -Wl,-no_compact_unwind",
+    "mkmaindll": "gcc -shared -undefined dynamic_lookup -Wl,-no_compact_unwind -Wl,-w",
     "mksharedlibrpath": "",
     "ar": "ar",
     "supports_shared_libraries": true,
@@ -36,10 +39,10 @@
     "profinfo": false,
     "profinfo_width": 0,
     "ext_exe": "",
-    "ext_obj": ".o",
-    "ext_asm": ".s",
-    "ext_lib": ".a",
-    "ext_dll": ".so",
+    "ext_obj": "o",
+    "ext_asm": "s",
+    "ext_lib": "a",
+    "ext_dll": "so",
     "host": "x86_64-apple-darwin22.1.0",
     "target": "x86_64-apple-darwin22.1.0",
     "systhread_supported": true,
