--- a/config/config.ml.json.in
+++ b/config/config.ml.json.in
@@ -16,6 +16,9 @@
     "native_c_libraries": "@nativecclibs@",
     "native_pack_linker": "@PACKLD@",
     "default_rpath": "@rpath@",
+    "mkdll": "@mkdll_exp@",
+    "mkexe": "@mkexe_exp@",
+    "mkmaindll": "@mkmaindll_exp@",
     "mksharedlibrpath": "@mksharedlibrpath@",
     "ar": "@AR@",
     "supports_shared_libraries": @supports_shared_libraries@,
@@ -36,10 +39,10 @@
     "profinfo": @profinfo@,
     "profinfo_width": @profinfo_width@,
     "ext_exe": "@exeext@",
-    "ext_obj": ".@OBJEXT@",
-    "ext_asm": ".@S@",
-    "ext_lib": ".@libext@",
-    "ext_dll": ".@SO@",
+    "ext_obj": "@OBJEXT@",
+    "ext_asm": "@S@",
+    "ext_lib": "@libext@",
+    "ext_dll": "@SO@",
     "host": "@host@",
     "target": "@target@",
     "systhread_supported": @systhread_support@,
