--- a/platform/constraints/ocaml/executor/BUILD.bazel
+++ b/platform/constraints/ocaml/executor/BUILD.bazel
@@ -6,8 +6,8 @@ constraint_setting(name = "executor")
 ## Executor is always vm or sys; the latter matches whatever the
 ## runtime is (amd64 or whatever).
 
-constraint_value(name = "sys", constraint_setting = ":executor")
-config_setting(name = "sys?", constraint_values = [":sys"])
+constraint_value(name = "sys_executor", constraint_setting = ":executor")
+config_setting(name = "sys_executor?", constraint_values = [":sys_executor"])
 
-constraint_value(name = "vm", constraint_setting = ":executor")
-config_setting(name = "vm?", constraint_values = [":vm"])
+constraint_value(name = "vm_executor", constraint_setting = ":executor")
+config_setting(name = "vm_executor?", constraint_values = [":vm_executor"])
