--- a/platform/ocaml/local/BUILD.bazel
+++ b/platform/ocaml/local/BUILD.bazel
@@ -19,10 +19,10 @@ package(default_visibility = ["//visibility:public"])
 
 # If we don't keep these distinct in platforms, then we won't be able
 # to test for those constraints. For example, the build platform could
-# have //platform/constraints/ocaml/emitter:vm, meaning our build is
+# have //platform/constraints/ocaml/emitter:vm_emitter, meaning our build is
 # going to emit bytecode. If we're building a vm->sys commpiler, then
 # the target platform will set
-# //platform/constraints/ocaml/emitter:sys. Which means both
+# //platform/constraints/ocaml/emitter:sys_emitter. Which means both
 # constraints would be satisfied, and we would have no way of knowing
 # which is for the build and which for the target. We can only test to
 # see if constraints are satisfied; there is no way that I know of the
@@ -33,9 +33,9 @@ package(default_visibility = ["//visibility:public"])
 
 # But for cross-cross-compilers we need to keep them separate, which
 # we do by making the role part of the constraint definition. Instead
-# of one //platform/constraints/ocaml/emitter:vm we have
-#     //platform/constraints/ocaml/build/emitter:vm
-#     //platform/constraints/ocaml/target/emitter:vm
+# of one //platform/constraints/ocaml/emitter:vm_emitter we have
+#     //platform/constraints/ocaml/build/emitter:vm_emitter
+#     //platform/constraints/ocaml/target/emitter:vm_emitter
 
 # The problem with this is that Bazel does "toolchain transitions",
 # which set the target platform equal to the build platform. Then we
@@ -65,61 +65,61 @@ package(default_visibility = ["//visibility:public"])
 platform(name = "sys_runtime", parents = ["@local_config_platform//:host"])
 
 platform(name = "sys_vm", parents = [":sys_runtime"],
-         constraint_values = ["//platform/constraints/ocaml/executor:vm"])
+         constraint_values = ["//platform/constraints/ocaml/executor:vm_executor"])
+platform(name = "sys_sys", parents = [":sys_runtime"],
+         constraint_values = ["//platform/constraints/ocaml/executor:sys_executor"])
 
 platform(name = "sys_vm_vm", parents = [":sys_vm"],
-         constraint_values = ["//platform/constraints/ocaml/emitter:vm"])
+         constraint_values = ["//platform/constraints/ocaml/emitter:vm_emitter"])
 platform(name = "sys_vm_sys", parents = [":sys_vm"],
-         constraint_values = ["//platform/constraints/ocaml/emitter:sys"])
+         constraint_values = ["//platform/constraints/ocaml/emitter:sys_emitter"])
 
-platform(name = "sys_sys", parents = [":sys_runtime"],
-         constraint_values = ["//platform/constraints/ocaml/executor:sys"])
 alias(name = "sys", actual = ":sys_sys")
 
 platform(name = "sys_sys_vm", parents = [":sys_sys"],
-         constraint_values = ["//platform/constraints/ocaml/emitter:vm"])
+         constraint_values = ["//platform/constraints/ocaml/emitter:vm_emitter"])
 platform(name = "sys_sys_sys", parents = [":sys_sys"],
-         constraint_values = ["//platform/constraints/ocaml/emitter:sys"])
+         constraint_values = ["//platform/constraints/ocaml/emitter:sys_emitter"])
 
 # platform(name = "sys_vm_build", parents = [":sys"],
-#          constraint_values = ["//platform/constraints/ocaml/build/executor:vm"])
+#          constraint_values = ["//platform/constraints/ocaml/build/executor:vm_executor"])
 # platform(name = "sys_vm_target", parents = [":sys"],
-#          constraint_values = ["//platform/constraints/ocaml/target/executor:vm"])
+#          constraint_values = ["//platform/constraints/ocaml/target/executor:vm_executor"])
 
 # platform(name = "sys_sys_build", parents = [":sys"],
 #          constraint_values = [
-#              "//platform/constraints/ocaml/build/executor:sys"])
+#              "//platform/constraints/ocaml/build/executor:sys_executor"])
 # platform(name = "sys_sys_target", parents = [":sys"],
 #          constraint_values = [
-#              "//platform/constraints/ocaml/target/executor:sys"])
+#              "//platform/constraints/ocaml/target/executor:sys_executor"])
 
 # ocamlc.byte
 # platform(name = "sys_vm_vm", parents = [":sys_vm"],
-#          constraint_values = ["//platform/constraints/ocaml/emitter:vm"])
+#          constraint_values = ["//platform/constraints/ocaml/emitter:vm_emitter"])
 
 # platform(name = "sys_vm_vm_build", parents = [":sys_vm_build"],
-#          constraint_values = ["//platform/constraints/ocaml/build/emitter:vm"])
+#          constraint_values = ["//platform/constraints/ocaml/build/emitter:vm_emitter"])
 # platform(name = "sys_vm_vm_target", parents = [":sys_vm_target"],
-#          constraint_values = ["//platform/constraints/ocaml/target/emitter:vm"])
+#          constraint_values = ["//platform/constraints/ocaml/target/emitter:vm_emitter"])
 
 # ocamlopt.byte
 # platform(name = "sys_vm_sys", parents = [":sys_vm"],
-#          constraint_values = ["//platform/constraints/ocaml/emitter:sys"])
+#          constraint_values = ["//platform/constraints/ocaml/emitter:sys_emitter"])
 
 # platform(name = "sys_vm_sys_build", parents = [":sys_vm_build"],
 #          constraint_values = [
-#              "//platform/constraints/ocaml/build/emitter:sys"
+#              "//platform/constraints/ocaml/build/emitter:sys_emitter"
 #          ])
 # platform(name = "sys_vm_sys_target", parents = [":sys_vm_target"],
-#          constraint_values = ["//platform/constraints/ocaml/target/emitter:sys"])
+#          constraint_values = ["//platform/constraints/ocaml/target/emitter:sys_emitter"])
 
 ################
 # ocamlc.opt
 # platform(name = "sys_sys_vm_build", parents = [":sys_sys_build"],
-#          constraint_values = ["//platform/constraints/ocaml/build/emitter:vm"])
+#          constraint_values = ["//platform/constraints/ocaml/build/emitter:vm_emitter"])
 
 # platform(name = "sys_sys_vm_target", parents = [":sys_sys_target"],
-#          constraint_values = ["//platform/constraints/ocaml/target/emitter:vm"])
+#          constraint_values = ["//platform/constraints/ocaml/target/emitter:vm_emitter"])
 
 
 ################################################################
@@ -136,8 +136,8 @@ platform(name = "sys_sys_sys", parents = [":sys_sys"],
 #     parents = [":sys_vm_vm_build"],
 #     constraint_values = ["//platform/constraints/stage:boot"],
 #     # exec_compatible_with  = [
-#     #     "//platform/constraints/ocaml/build/executor:vm",
-#     #     "//platform/constraints/ocaml/build/emitter:vm",
+#     #     "//platform/constraints/ocaml/build/executor:vm_executor",
+#     #     "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #     #     "//platform/constraints/stage:boot"
 #     # ]
 # )
@@ -147,8 +147,8 @@ platform(name = "sys_sys_sys", parents = [":sys_sys"],
 #     parents = [":sys_vm_vm_target"],
 #     constraint_values = ["//platform/constraints/stage:boot"],
 #     # exec_compatible_with  = [
-#     #     "//platform/constraints/ocaml/target/executor:vm",
-#     #     "//platform/constraints/ocaml/target/emitter:vm",
+#     #     "//platform/constraints/ocaml/target/executor:vm_executor",
+#     #     "//platform/constraints/ocaml/target/emitter:vm_emitter",
 #     #     "//platform/constraints/stage:boot"
 #     # ]
 # )
@@ -167,15 +167,15 @@ platform(name = "sys_sys_sys", parents = [":sys_sys"],
 # platform(name = "sys_sys_sys",   # ocamlopt.opt
 #          parents = ["@local_config_platform//:host"],
 #          constraint_values = [
-#              "//platform/constraints/ocaml/executor:sys",
-#              "//platform/constraints/ocaml/emitter:sys"])
+#              "//platform/constraints/ocaml/executor:sys_executor",
+#              "//platform/constraints/ocaml/emitter:sys_emitter"])
 
 # platform(name = "sys_sys_vm",   # ocamlc.opt
 #          parents = ["@local_config_platform//:host"],
 #          constraint_values = [
 #              # "@platforms//os:linux", "@platforms//cpu:x86_64",
-#              "//platform/constraints/ocaml/executor:sys",
-#              "//platform/constraints/ocaml/emitter:vm"])
+#              "//platform/constraints/ocaml/executor:sys_executor",
+#              "//platform/constraints/ocaml/emitter:vm_emitter"])
 
 ################################################################
 #### cross-platform cross-compilation
@@ -185,5 +185,5 @@ platform(name = "sys_sys_sys", parents = [":sys_sys"],
 #          parents = ["@local_config_platform//:host"],
 #          constraint_values = [
 #              "@platforms//os:linux", "@platforms//cpu:x86_64",
-#              "//platform/constraints/ocaml/executor:vm",
-#              "//platform/constraints/ocaml/emitter:vm"])
+#              "//platform/constraints/ocaml/executor:vm_executor",
+#              "//platform/constraints/ocaml/emitter:vm_emitter"])
