--- a/bin/BUILD.bazel
+++ b/bin/BUILD.bazel
@@ -15,12 +15,12 @@ load("//bzl/rules/macros:lexer.bzl", "lexer")
 #     name  = "ocamlc.byte",
 #     stage = "prod",
 #     build_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 #     target_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 # )
 
@@ -28,12 +28,12 @@ load("//bzl/rules/macros:lexer.bzl", "lexer")
 #     name  = "ocamllex.byte",
 #     stage = "prod",
 #     build_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 #     target_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 # )
 
