--- a/boot/baseline/compiler/BUILD.bazel
+++ b/boot/baseline/compiler/BUILD.bazel
@@ -5,10 +5,8 @@ load("//bzl:rules.bzl",
      "boot_compiler",
      "compiler_module")
 
-load("//bzl/rules/macros:compiler.bzl", "compiler")
+# load("//bzl/rules/macros:compiler.bzl", "compiler")
 load("//bzl/rules/macros:lexer.bzl", "lexer")
-
-# load("//bzl/rules/macros:stdlib.bzl", "stdlib")
 
 # This macro expands to three different boot_compiler targets:
 #   //baseline/compiler:baseline uses the boot compiler
@@ -16,23 +14,25 @@ load("//bzl/rules/macros:lexer.bzl", "lexer")
 #   //baseline/compiler:prod uses the dev compiler
 # compiler( name  = "compilers" )
 
-## uses boot compiler to produce baseline ocamlc.byte
+## if stage < 2 then force emit vm_vm
+## else follow emitter setting
+
 boot_compiler(
     name                   = "compiler",
-    # stage                  = "boot", # stage,
     prologue = ["//compilerlibs:ocamlcommon"] + select({
-        "//platform/constraints/ocaml/emitter:sys?":
-        ["//asmcomp:ocamloptcomp"],
+        # if tgt exec = sys then penultimate = vm->sys
+        "//config/target:penult_sys_vm?": ["//bytecomp:ocamlbytecomp"],
+        "//config/target:penult_sys_sys?": ["//asmcomp:ocamloptcomp"],
+        "//config/target:ult_sys?": ["//asmcomp:ocamloptcomp"],
 
-        "//platform/constraints/ocaml/emitter:vm?":
-        ["//bytecomp:ocamlbytecomp"],
+        "//conditions:default": ["//bytecomp:ocamlbytecomp"]
     }),
     main = select({
-        "//platform/constraints/ocaml/emitter:sys?":
-        "//driver:Optmain",
+        "//config/target:ult_sys?": "//driver:Optmain",
+        "//config/target:penult_sys_vm?": "//driver:Main",
+        "//config/target:penult_sys_sys?": "//driver:Optmain",
 
-        "//platform/constraints/ocaml/emitter:vm?":
-        "//driver:Main"
+        "//conditions:default": "//driver:Main"
     }),
     # prologue = [
     #     "//compilerlibs:ocamlcommon",
@@ -42,125 +42,46 @@ boot_compiler(
     opts                   = [],
     # compatibility constraints ensure selection of boot toolchain
     # exec_compatible_with   = [
-    #     "//platform/constraints/ocaml/executor:vm",
+    #     "//platform/constraints/ocaml/executor:vm_executor",
 
     #     # platform: boot_build == sys_vm_vm + build + boot
-    #     # "//platform/constraints/ocaml/build/executor:vm",
-    #     # "//platform/constraints/ocaml/build/emitter:vm",
+    #     # "//platform/constraints/ocaml/build/executor:vm_executor",
+    #     # "//platform/constraints/ocaml/build/emitter:vm_emitter",
     #     # "//platform/constraints/stage:boot"
     # ],
     # target_compatible_with = [
-    #     "//platform/constraints/ocaml/executor:vm",
+    #     "//platform/constraints/ocaml/executor:vm_executor",
     #     # platform: boot_target == sys_vm_vm + target + boot
-    #     # "//platform/constraints/ocaml/target/executor:vm",
-    #     # "//platform/constraints/ocaml/target/emitter:vm",
+    #     # "//platform/constraints/ocaml/target/executor:vm_executor",
+    #     # "//platform/constraints/ocaml/target/emitter:vm_emitter",
     #     # "//platform/constraints/stage:boot"
     # ],
-    visibility             = ["//visibility:public"]
-)
-boot_compiler(
-    name                   = "baselinex",
-    # stage                  = "boot", # stage,
-    prologue = [
-        "//compilerlibs:ocamlcommon",
-        "//bytecomp:ocamlbytecomp"
-    ],
-    main = "//driver:Main",
-    opts                   = [],
-    # compatibility constraints ensure selection of boot toolchain
-    exec_compatible_with   = [
-        # platform: boot_build == sys_vm_vm + build + boot
-        "//platform/constraints/ocaml/target/executor:vm",
-        # "//platform/constraints/ocaml/target/emitter:vm",
-        "//platform/constraints/stage:boot"
-    ],
-    target_compatible_with = [
-        # platform: boot_target == sys_vm_vm + target + boot
-        "//platform/constraints/ocaml/target/executor:vm",
-        # "//platform/constraints/ocaml/target/emitter:vm",
-        "//platform/constraints/stage:boot"
-    ],
     visibility             = ["//visibility:public"]
 )
 
 # uses baseline ocamlc.byte to produce ocamlc.byte, ocamlopt.byte
-boot_compiler(
-    name                   = "dev",
-    # stage                  = "dev", # stage,
-    prologue = ["//compilerlibs:ocamlcommon"] + select({
-        "//platform/constraints/ocaml/target/emitter:sys?": ["//asmcomp:ocamloptcomp"],
-        "//platform/constraints/ocaml/target/emitter:vm?": ["//bytecomp:ocamlbytecomp"],
-    }),
-    main = select({
-        "//platform/constraints/ocaml/target/emitter:sys?": "//driver:Optmain",
-        "//platform/constraints/ocaml/target/emitter:vm?": "//driver:Main"
-    }),
-    opts                   = [],
-    exec_compatible_with   = [
-        "//platform/constraints/ocaml/build/executor:vm",
-        "//platform/constraints/ocaml/build/emitter:vm",
-        "//platform/constraints/stage:baseline"
-    ],
-    target_compatible_with = [
-        # platform: boot_target == sys_vm_vm + target + boot
-        # "//platform/constraints/ocaml/target/executor:vm",
-        # "//platform/constraints/ocaml/target/emitter:vm",
-        # "//platform/constraints/stage:baseline"
-        ],
-    visibility             = ["//visibility:public"]
-)
-
-# compiler(
-#     name  = "ocamlc.byte",
-#     stage = "baseline",  ## depends on boot toolchain
-#     build_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+# boot_compiler(
+#     name                   = "dev",
+#     # stage                  = "dev", # stage,
+#     prologue = ["//compilerlibs:ocamlcommon"] + select({
+#         "//platform/constraints/ocaml/target/emitter:sys_emitter?": ["//asmcomp:ocamloptcomp"],
+#         "//platform/constraints/ocaml/target/emitter:vm_emitter?": ["//bytecomp:ocamlbytecomp"],
+#     }),
+#     main = select({
+#         "//platform/constraints/ocaml/target/emitter:sys_emitter?": "//driver:Optmain",
+#         "//platform/constraints/ocaml/target/emitter:vm_emitter?": "//driver:Main"
+#     }),
+#     opts                   = [],
+#     exec_compatible_with   = [
+#         "//platform/constraints/ocaml/build/executor:vm_executor",
+#         "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #         "//platform/constraints/stage:baseline"
 #     ],
-#     target_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
-#     ],
+#     target_compatible_with = [
+#         # platform: boot_target == sys_vm_vm + target + boot
+#         # "//platform/constraints/ocaml/target/executor:vm_executor",
+#         # "//platform/constraints/ocaml/target/emitter:vm_emitter",
+#         # "//platform/constraints/stage:baseline"
+#         ],
+#     visibility             = ["//visibility:public"]
 # )
-
-# compiler(
-#     name  = "ocamlopt.byte",
-#     stage = "baseline",
-#     # build_host = "vm",
-#     # target_host = "sys",
-#     build_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
-#     ],
-#     target_host_constraints = [
-#         "//platform/constraints/ocaml/target/executor:vm",
-#         "//platform/constraints/ocaml/target/emitter:sys"
-#     ],
-# )
-
-lexer(
-    name  = "lexer", ## ocamllex.byte",
-    # stage = "baseline",
-    build_host_constraints = [
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm"
-    ],
-    target_host_constraints = [
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm"
-    ],
-)
-
-# alias( # implemented in C, so no byte/opt versions.
-#     name   = "ocamlyacc",
-#     actual = "//yacc:ocamlyacc",
-#     # target_compatible_with = ["//platform/target:boot?"]
-# )
-
-# alias( # implemented in C, so no byte/opt versions.
-#     name   = "ocamlrun",
-#     actual = "//runtime:ocamlrun",
-# )
-
-# stdlib(stage  = "baseline")
