--- a/boot/toolchain/selector/BUILD.bazel
+++ b/boot/toolchain/selector/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//toolchain/selectors:BUILD.bzl", "toolchain_selector")
+load("//toolchain/selector:BUILD.bzl", "toolchain_selector")
 
 package(default_visibility=["//visibility:public"])
 
@@ -6,78 +6,76 @@ exports_files(glob(["*.bazel"]))
 
 # toolchain_selector(  ## ocamlc.byte, ocamlopt.byte from ocamlc.byte
 #     name           = "vmvm",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:vmvm",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:vmvm",
 #     build_host_constraints  = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm",
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter",
 #     ],
 #     target_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         # "//platform/constraints/ocaml/emitter:vm",
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         # "//platform/constraints/ocaml/emitter:vm_emitter",
 #     ],
 # )
 
-toolchain_selector(  ## ocamlopt.byte, rom ocamlc.byte
-    name           = "vv_vv",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:vv_vv",
-    build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm",
-    ],
-    target_host_constraints = [
-        "//platform/constraints/ocaml/executor:vm",
-    ],
-    target_host_configuration = [
-        # "//platform/constraints/ocaml/emitter:vm",
-        "//config/target/emitter:vm?"
-    ]
-)
+# toolchain_selector(  ## ocamlopt.byte, rom ocamlc.byte
+#     name           = "vv_vv",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:vv_vv",
+#     build_host_constraints  = [
+#         # any cpu/os pair, plus:
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#     ],
+#     target_host_constraints = [
+#         # any cpu/os pair, plus:
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#     ],
+# )
 
-toolchain_selector(  ## ocamlopt.byte, rom ocamlc.byte
-    name           = "vv_vs",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:vv_vs",
-    build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm"],
-    target_host_constraints = [
-        "//platform/constraints/ocaml/executor:vm"],
-    target_host_configuration = [
-        "//config/target/emitter:sys?"]
-)
+# toolchain_selector(  ## ocamlopt.byte, rom ocamlc.byte
+#     name           = "vv_vs",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:vv_vs",
+#     build_host_constraints  = [
+#         "//platform/constraints/ocaml/executor:vm_executor"],
+#     target_host_constraints = [
+#         "//platform/constraints/ocaml/executor:vm_executor"],
+#     target_host_configuration = [
+#         "//config/target/emitter:sys?"]
+# )
 
-toolchain_selector(
-    name           = "vs_ss",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:vs_ss",
-    build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm"],
-    target_host_constraints = [
-        "//platform/constraints/ocaml/executor:sys"],
-    target_host_configuration = [
-        "//config/target/emitter:sys?"]
-)
+# toolchain_selector(
+#     name           = "vs_ss",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:vs_ss",
+#     build_host_constraints  = [
+#         "//platform/constraints/ocaml/executor:vm_executor"],
+#     target_host_constraints = [
+#         "//platform/constraints/ocaml/executor:sys_executor"],
+#     target_host_configuration = [
+#         "//config/target/emitter:sys?"]
+# )
 
 toolchain_selector(
     name           = "vs_sv",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:vs_sv",
+    type           = "//toolchain/type:boot",
+    adapter        = "//toolchain/adapter:vs_sv",
     build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm"],
+        "//platform/constraints/ocaml/executor:vm_executor"],
     target_host_constraints = [
-        "//platform/constraints/ocaml/executor:sys"],
+        "//platform/constraints/ocaml/executor:sys_executor"],
     target_host_configuration = [
         "//config/target/emitter:vm?"]
 )
 
 toolchain_selector(
     name           = "sys_sysvm",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:vm_vmsys",
+    type           = "//toolchain/type:boot",
+    adapter        = "//toolchain/adapter:vm_vmsys",
     build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:sys"],
+        "//platform/constraints/ocaml/executor:sys_executor"],
     target_host_constraints = [
-        "//platform/constraints/ocaml/executor:sys"],
+        "//platform/constraints/ocaml/executor:sys_executor"],
     target_host_configuration = [
         "//config/target/emitter:vm?"]
 )
@@ -85,52 +83,52 @@ toolchain_selector(
 ## vmsys: vmvm to sysvm (ocamlc.opt), syssys (ocamlopt.opt)
 toolchain_selector(
     name           = "vmsys",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:vmsys",
+    type           = "//toolchain/type:boot",
+    adapter        = "//toolchain/adapter:vmsys",
     build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm",
+        "//platform/constraints/ocaml/executor:vm_executor",
+        "//platform/constraints/ocaml/emitter:vm_emitter",
     ],
     target_host_constraints = [
-        "//platform/constraints/ocaml/executor:sys",
-        # "//platform/constraints/ocaml/emitter:vm",
+        "//platform/constraints/ocaml/executor:sys_executor",
+        # "//platform/constraints/ocaml/emitter:vm_emitter",
     ],
 )
 
 ###################
 toolchain_selector(  ## ocamlc.opt from ocamlopt.byte
     name           = "syssys",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:sys_vm_vm__sys_vm_sys",
+    type           = "//toolchain/type:boot",
+    adapter        = "//toolchain/adapter:sys_vm_vm__sys_vm_sys",
     build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:sys",
+        "//platform/constraints/ocaml/executor:vm_executor",
+        "//platform/constraints/ocaml/emitter:sys_emitter",
     ],
     target_host_constraints = [
-        "//platform/constraints/ocaml/executor:sys",
-    #     "//platform/constraints/ocaml/emitter:vm",
+        "//platform/constraints/ocaml/executor:sys_executor",
+    #     "//platform/constraints/ocaml/emitter:vm_emitter",
     ],
 )
 
 ################################################################
 # toolchain_selector(
 #     name           = "boot",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:boot",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:boot",
 #     build_host_constraints  = [
-#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/executor:vm_executor",
 
 #         # platform: boot_build == sys_vm_vm + build + boot
-#         # "//platform/constraints/ocaml/build/executor:vm",
-#         # "//platform/constraints/ocaml/build/emitter:vm",
+#         # "//platform/constraints/ocaml/build/executor:vm_executor",
+#         # "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #         # "//platform/constraints/stage:boot"
 #     ],
 #     target_host_constraints = [
-#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/executor:vm_executor",
 
 #         # platform: boot_target == sys_vm_vm + target + boot
-#         # "//platform/constraints/ocaml/target/executor:vm",
-#         # "//platform/constraints/ocaml/target/emitter:vm",
+#         # "//platform/constraints/ocaml/target/executor:vm_executor",
+#         # "//platform/constraints/ocaml/target/emitter:vm_emitter",
 #         # "//platform/constraints/stage:boot"
 #     ],
 # )
@@ -138,36 +136,36 @@ toolchain_selector(  ## ocamlc.opt from ocamlopt.byte
 
 # toolchain_selector(
 #     name           = "baseline",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:baseline",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:baseline",
 #     build_host_constraints  = [
 #         # platform: boot_build == sys_vm_vm + build + boot
-#         "//platform/constraints/ocaml/build/executor:vm",
-#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/ocaml/build/executor:vm_executor",
+#         "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #         "//platform/constraints/stage:baseline"
 #     ],
 #     target_host_constraints = [
 #         # platform: boot_target == sys_vm_vm + target + boot
-#         # "//platform/constraints/ocaml/target/executor:vm",
-#         # "//platform/constraints/ocaml/target/emitter:vm",
+#         # "//platform/constraints/ocaml/target/executor:vm_executor",
+#         # "//platform/constraints/ocaml/target/emitter:vm_emitter",
 #         "//platform/constraints/stage:baseline"
 #     ],
 # )
 
 # toolchain_selector(
 #     name           = "boot_boot",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:boot",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:boot",
 #     build_host_constraints  = [
 #         # platform: boot_build == sys_vm_vm + build + boot
-#         "//platform/constraints/ocaml/build/executor:vm",
-#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/ocaml/build/executor:vm_executor",
+#         "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #         "//platform/constraints/stage:boot"
 #     ],
 #     target_host_constraints = [
 #         # platform: boot_target == sys_vm_vm + target + boot
-#         "//platform/constraints/ocaml/build/executor:vm",
-#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/ocaml/build/executor:vm_executor",
+#         "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #         "//platform/constraints/stage:boot"
 #     ],
 # )
@@ -175,97 +173,97 @@ toolchain_selector(  ## ocamlc.opt from ocamlopt.byte
 ## for toolchain transitions setting target = build
 # toolchain_selector(
 #     name           = "baseline_involute",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:boot",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:boot",
 #     build_host_constraints  = [
 #         # platform: boot_build == sys_vm_vm + build + boot
-#         "//platform/constraints/ocaml/build/executor:vm",
-#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/ocaml/build/executor:vm_executor",
+#         "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #         "//platform/constraints/stage:baseline"
 #     ],
 #     target_host_constraints  = [
 #         # platform: boot_build == sys_vm_vm + build + boot
-#         "//platform/constraints/ocaml/build/executor:vm",
-#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/ocaml/build/executor:vm_executor",
+#         "//platform/constraints/ocaml/build/emitter:vm_emitter",
 #         "//platform/constraints/stage:baseline"
 #     ],
 # )
 
 # toolchain_selector(
 #     name           = "vmvm",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:boot",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:boot",
 #     build_host_constraints  = [
 #         # platform: sys_vm_vm
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 #     target_host_constraints  = [
 #         # platform: sys_vm_vm
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 # )
 
 # toolchain_selector(
 #     name           = "vmsys",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:baseline",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:baseline",
 #     build_host_constraints  = [
 #         # platform: sys_vm_vm
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 #     target_host_constraints  = [
 #         # platform: sys_vm_sys
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:sys"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:sys_emitter"
 #     ],
 # )
 
 # toolchain_selector(
 #     name           = "xvmsys",
-#     type           = "//boot/toolchain/type:boot",
-#     adapter        = "//boot/toolchain/adapter:baseline",
+#     type           = "//toolchain/type:boot",
+#     adapter        = "//toolchain/adapter:baseline",
 #     build_host_constraints  = [
 #         # platform: sys_vm_vm
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 #     target_host_constraints  = [
 #         # platform: sys_vm_sys
-#         "//platform/constraints/ocaml/target/executor:vm",
-#         "//platform/constraints/ocaml/target/emitter:sys"
+#         "//platform/constraints/ocaml/target/executor:vm_executor",
+#         "//platform/constraints/ocaml/target/emitter:sys_emitter"
 #     ],
 # )
 
 # toolchain_selector(
 #     name           = "baseline",
-#     type           = "//boot/toolchain/type:baseline",
-#     adapter        = "//boot/toolchain/adapter:baseline",
+#     type           = "//toolchain/type:baseline",
+#     adapter        = "//toolchain/adapter:baseline",
 #     build_host_constraints  = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm",
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter",
 #         # make this unselectable:
 #         # "//platform/constraints/stage:prod",
 #     ],
 #     # target_host_constraints  = [
-#     #     "//platform/constraints/ocaml/executor:vm",
-#     #     "//platform/constraints/ocaml/emitter:vm"
+#     #     "//platform/constraints/ocaml/executor:vm_executor",
+#     #     "//platform/constraints/ocaml/emitter:vm_emitter"
 #     # ],
 # )
 
 # toolchain_selector(
 #     name           = "stdlib",
-#     type           = "//boot/toolchain/type:stdlib",
-#     adapter        = "//boot/toolchain/adapter:stdlib",
+#     type           = "//toolchain/type:stdlib",
+#     adapter        = "//toolchain/adapter:stdlib",
 #     build_host_constraints  = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 #     target_host_constraints  = [
-#         "//platform/constraints/ocaml/executor:vm",
-#         "//platform/constraints/ocaml/emitter:vm"
+#         "//platform/constraints/ocaml/executor:vm_executor",
+#         "//platform/constraints/ocaml/emitter:vm_emitter"
 #     ],
 # )
 
