--- a/config/stage/BUILD.bazel
+++ b/config/stage/BUILD.bazel
@@ -1,5 +1,5 @@
-load("@bazel_skylib//rules:common_settings.bzl",
-     "int_flag", "string_flag")
+load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "string_flag")
+load("@bazel_skylib//lib:selects.bzl", "selects")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -12,12 +12,18 @@ package(default_visibility = ["//visibility:public"])
 # config_setting(name = "prod?", flag_values = {":stage": "prod"})
 
 
-int_flag(name = "stage", build_setting_default = 0,
+int_flag(name = "stage", build_setting_default = -1,
     visibility = ["//visibility:public"])
 config_setting(name = "0?", flag_values = {":stage": "0"})
 config_setting(name = "1?", flag_values = {":stage": "1"})
 config_setting(name = "2?", flag_values = {":stage": "2"})
 config_setting(name = "3?", flag_values = {":stage": "3"})
+config_setting(name = "-1?", flag_values = {":stage": "-1"})
+
+selects.config_setting_group(
+    name = ">1?",
+    match_any = [":2?", ":3?", "-1?"]
+)
 
 # int_setting(
 #     name = "stage0",
