--- a/runtime/BUILD.bazel
+++ b/runtime/BUILD.bazel
@@ -87,7 +87,7 @@ cc_library(
     linkstatic = True,
     # linkshared = True,
     srcs = [
-        "//runtime:build_config.h",
+        # "//runtime:build_config.h",
         "//runtime:common_c_sources",
         "//runtime:native_only_c_sources",
         ":asm",
@@ -340,20 +340,20 @@ NATIVE_ONLY_C_SOURCES = [
 # RUNTIME_NATIVE_C_SOURCES = COMMON_C_SOURCES + NATIVE_ONLY_C_SOURCES
 
 ########
-genrule(
-    outs = ["build_config.h"],
-    name = "build_config_h",
-    tools = ["//runtime:sak.exe"],
-    srcs = ["//profile/system/local:BUILD.bazel"],
-    cmd  = " ".join([
-        "STDLIBDIR=`$(location //runtime:sak.exe) encode-C-literal $(LIBDIR)`;",
-	    "echo '/* This file is generated from $(location //profile/system/local:BUILD.bazel) */' > $@;",
-	    "echo \"#define OCAML_STDLIB_DIR $$STDLIBDIR\" >> $@;",
-	    "echo '#define HOST \"$(HOST)\"' >> $@"
-    ]),
-    toolchains = ["//profile/system/local"],
-    visibility = ["//boot:__pkg__"]
-)
+# genrule(
+#     outs = ["build_config.h"],
+#     name = "build_config_h",
+#     tools = ["//runtime:sak.exe"],
+#     srcs = ["//profile/system/local:BUILD.bazel"],
+#     cmd  = " ".join([
+#         "STDLIBDIR=`$(location //runtime:sak.exe) encode-C-literal $(LIBDIR)`;",
+# 	    "echo '/* This file is generated from $(location //profile/system/local:BUILD.bazel) */' > $@;",
+# 	    "echo \"#define OCAML_STDLIB_DIR $$STDLIBDIR\" >> $@;",
+# 	    "echo '#define HOST \"$(HOST)\"' >> $@"
+#     ]),
+#     toolchains = ["//profile/system/local"],
+#     visibility = ["//boot:__pkg__"]
+# )
 
 ##//Makefile:
   # $(shell runtime/gen_primitives.sh > runtime/primitives.new; \
